k8s/koryalbert.net/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koryalbert-net
  namespace: koryalbert-net
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koryalbert-net
  template:
    metadata:
      labels:
        app: koryalbert-net
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: website
              mountPath: /usr/share/nginx/html
              readOnly: true
      volumes:
        - name: website
          persistentVolumeClaim:
            claimName: koryalbert-net-pvc
