k8s/koryalbert.net/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: koryalbert-net
  namespace: koryalbert-net
spec:
  selector:
    app: koryalbert-net
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
