k8s/koryalbert.net/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koryalbert-net
  namespace: koryalbert-net
spec:
  parentRefs:
    - name: gateway-external
      namespace: gateway
  hostnames:
    - "koryalbert.net"
    - "www.koryalbert.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: koryalbert-net
          port: 80
